2017-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/parse.cpp: Extended to support local_date(time)

	* inst/toml/ex2.toml: Extended for new types

2017-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

2017-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

	* src/parse.cpp: Added copyright header
	* R/parseToml.R: Idem

	* .travis.yml: Switch to using run.sh for Travis CI

	* README.md: Updated

	* inst/NEWS.Rd: Added

2017-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version
	(BugReports, URL): Added

	* src/parse.cpp (local_timegm): Restore parts of old behaviour

	* src/Makevars.win: Added

	* .travis.yml: Use trusty, also dump logs on failure

2017-01-03  Devin Pastoor  <devin.pastoor@gmail.com>

	* src/parse.cpp (local_timegm): On Windows, use Rcpp::mktime00 (as
	suggested by Dirk in GitHub Issue #5)

2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.0.5

2015-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

	* src/parse.cpp: Small accomodations for changed cpptoml.h

	* tests/float.toml: No longer attempt to parse double number which
	previously overflowed and is now rejected by cpptoml
	* tests/toml_example-v0.4.0.toml: Ditto
	* tests/float.Rout.save: Ditto
	* tests/tomlExamples.Rout.save: Ditto

2015-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.0.4

2015-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Minor update to upstream version

	* R/parseToml.R: Use utils::str() instead of str()

	* DESCRIPTION: More quoting of terms, rolled Version and Date

2015-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (collapsedList): Ensure list has content before
	iterating over it
