@@ -1,7 +1,7 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-tomlparseImpl <- function(filename, verbose = FALSE) {
-    .Call('RcppTOML_tomlparseImpl', PACKAGE = 'RcppTOML', filename, verbose)
+tomlparseImpl <- function(input, verbose = FALSE, fromfile = TRUE) {
+    .Call('RcppTOML_tomlparseImpl', PACKAGE = 'RcppTOML', input, verbose, fromfile)
 }
 
